@@ -12,6 +12,9 @@ What's New in Python 3.1.3?
 Core and Builtins
 -----------------
 
+- Issue #7415: PyUnicode_FromEncodedObject() now uses the new buffer API
+  properly.  Patch by Stefan Behnel.
+
 - Restore GIL in nis_cat in case of error.
 
 - Issue #9712: Fix tokenize on identifiers that start with non-ascii names.
